--- a/css/style.css
+++ b/css/style.css
@@ -513,6 +513,8 @@ h1 {
 	.blogs .blog div svg {
 		color: white;
 		/* width: 100px; */
+		width: 2.4rem;
+		height: 2.4rem;
 	}
 
 	.blogs .blog div .box {
